--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -557,52 +557,14 @@ video {
 	--tw-ring-offset-shadow: 0 0 #0000;
 	--tw-ring-shadow: 0 0 #0000;
 }
-.absolute {
+
+.bg-card {
 	position: absolute;
-}
-.relative {
-	position: relative;
-}
-.inset-0 {
 	top: 0px;
 	right: 0px;
 	bottom: 0px;
 	left: 0px;
-}
-.top-0 {
-	top: 0px;
-}
-.z-0 {
 	z-index: 0;
-}
-.z-10 {
-	z-index: 10;
-}
-.flex {
-	display: flex;
-}
-.inline-flex {
-	display: inline-flex;
-}
-.h-1\/2 {
-	height: 50%;
-}
-.min-h-screen {
-	min-height: 100vh;
-}
-.w-full {
-	width: 100%;
-}
-.w-80 {
-	width: 20rem;
-}
-.max-w-4xl {
-	max-width: 56rem;
-}
-.flex-shrink-0 {
-	flex-shrink: 0;
-}
-.transform {
 	--tw-translate-x: 0;
 	--tw-translate-y: 0;
 	--tw-rotate: 0;
@@ -611,124 +573,324 @@ video {
 	--tw-scale-x: 1;
 	--tw-scale-y: 1;
 	transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.-skew-y-6 {
 	--tw-skew-y: -6deg;
+	border-radius: 0.375rem;
+	background-image: linear-gradient(to right, var(--tw-gradient-stops));
+	--tw-gradient-from: #60a5fa;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(96, 165, 250, 0));
+	--tw-gradient-to: #fca5a5;
+	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+
+@media (min-width: 640px) {
+
+	.bg-card {
+		--tw-rotate: -6deg;
+	}
+
+	.bg-card {
+		--tw-skew-y: 0deg;
+	}
+}
+
+.absolute {
+	position: absolute;
+}
+
+.relative {
+	position: relative;
+}
+
+.top-0 {
+	top: 0px;
+}
+
+.z-10 {
+	z-index: 10;
+}
+
+.mx-auto {
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.mt-1 {
+	margin-top: 0.25rem;
+}
+
+.mt-16 {
+	margin-top: 4rem;
+}
+
+.mt-3 {
+	margin-top: 0.75rem;
+}
+
+.mt-4 {
+	margin-top: 1rem;
+}
+
+.flex {
+	display: flex;
+}
+
+.inline-flex {
+	display: inline-flex;
+}
+
+.grid {
+	display: grid;
+}
+
+.h-1\/2 {
+	height: 50%;
+}
+
+.min-h-screen {
+	min-height: 100vh;
+}
+
+.w-full {
+	width: 100%;
+}
+
+.w-80 {
+	width: 20rem;
+}
+
+.max-w-4xl {
+	max-width: 56rem;
+}
+
+.max-w-7xl {
+	max-width: 80rem;
+}
+
+.max-w-6xl {
+	max-width: 72rem;
+}
+
+.flex-shrink-0 {
+	flex-shrink: 0;
+}
+
+.grid-cols-1 {
+	grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .flex-col {
 	flex-direction: column;
 }
+
 .items-center {
 	align-items: center;
 }
+
+.items-stretch {
+	align-items: stretch;
+}
+
 .justify-center {
 	justify-content: center;
 }
+
 .justify-between {
 	justify-content: space-between;
 }
+
+.gap-16 {
+	gap: 4rem;
+}
+
 .space-x-12 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(3rem * var(--tw-space-x-reverse));
 	margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
 }
+
 .space-y-6 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-y-reverse: 0;
 	margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
+
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(1rem * var(--tw-space-x-reverse));
 	margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
+
+.space-y-8 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+
+.space-y-16 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(4rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(4rem * var(--tw-space-y-reverse));
+}
+
 .rounded-md {
 	border-radius: 0.375rem;
 }
+
 .rounded-full {
 	border-radius: 9999px;
 }
+
 .border-\[6px\] {
 	border-width: 6px;
 }
+
 .border-white {
 	--tw-border-opacity: 1;
 	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
 }
+
 .bg-white {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
-.bg-gradient-to-r {
-	background-image: linear-gradient(to right, var(--tw-gradient-stops));
+
+.bg-gray-50 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
-.from-blue-400 {
-	--tw-gradient-from: #60a5fa;
-	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(96, 165, 250, 0));
-}
-.to-red-300 {
-	--tw-gradient-to: #fca5a5;
-}
+
 .bg-cover {
 	background-size: cover;
 }
+
 .bg-bottom {
 	background-position: bottom;
 }
+
 .p-12 {
 	padding: 3rem;
 }
+
+.p-8 {
+	padding: 2rem;
+}
+
+.p-2 {
+	padding: 0.5rem;
+}
+
+.p-20 {
+	padding: 5rem;
+}
+
 .py-4 {
 	padding-top: 1rem;
 	padding-bottom: 1rem;
 }
+
+.px-6 {
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
+}
+
+.py-20 {
+	padding-top: 5rem;
+	padding-bottom: 5rem;
+}
+
+.px-8 {
+	padding-left: 2rem;
+	padding-right: 2rem;
+}
+
+.pt-20 {
+	padding-top: 5rem;
+}
+
+.pb-28 {
+	padding-bottom: 7rem;
+}
+
+.text-center {
+	text-align: center;
+}
+
 .text-lg {
 	font-size: 1.125rem;
 	line-height: 1.75rem;
 }
+
 .text-5xl {
 	font-size: 3rem;
 	line-height: 1;
 }
+
 .text-xl {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
 }
+
+.text-2xl {
+	font-size: 1.5rem;
+	line-height: 2rem;
+}
+
+.text-6xl {
+	font-size: 3.75rem;
+	line-height: 1;
+}
+
 .font-bold {
 	font-weight: 700;
 }
+
 .leading-relaxed {
 	line-height: 1.625;
 }
+
 .text-gray-600 {
 	--tw-text-opacity: 1;
 	color: rgba(75, 85, 99, var(--tw-text-opacity));
 }
+
 .text-gray-800 {
 	--tw-text-opacity: 1;
 	color: rgba(31, 41, 55, var(--tw-text-opacity));
 }
+
+.text-blue-500 {
+	--tw-text-opacity: 1;
+	color: rgba(59, 130, 246, var(--tw-text-opacity));
+}
+
 .antialiased {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+
 .shadow-md {
 	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+
 @media (min-width: 640px) {
 
-	.sm\:-rotate-6 {
-		--tw-rotate: -6deg;
-	}
-
-	.sm\:skew-y-0 {
-		--tw-skew-y: 0deg;
+	.sm\:grid-cols-2 {
+		grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
 }
+
 @media (min-width: 768px) {
 
 	.md\:flex {
 		display: flex;
+	}
+}
+
+@media (min-width: 1024px) {
+
+	.lg\:grid-cols-3 {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
 	}
 }
