--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -594,6 +594,27 @@ video {
 	}
 }
 
+.btn {
+	margin-top: 1rem;
+	display: inline-block;
+	border-radius: 0.375rem;
+	background-image: linear-gradient(to right, var(--tw-gradient-stops));
+	--tw-gradient-from: #60a5fa;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(96, 165, 250, 0));
+	--tw-gradient-to: #fca5a5;
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+	font-size: 0.875rem;
+	line-height: 1.25rem;
+	font-weight: 700;
+	--tw-text-opacity: 1;
+	color: rgba(255, 255, 255, var(--tw-text-opacity));
+	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .absolute {
 	position: absolute;
 }
@@ -610,13 +631,13 @@ video {
 	z-index: 10;
 }
 
+.col-span-2 {
+	grid-column: span 2 / span 2;
+}
+
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
-}
-
-.mt-1 {
-	margin-top: 0.25rem;
 }
 
 .mt-16 {
@@ -643,8 +664,16 @@ video {
 	display: grid;
 }
 
+.inline-block {
+	display: inline-block;
+}
+
 .h-1\/2 {
 	height: 50%;
+}
+
+.h-80 {
+	height: 20rem;
 }
 
 .min-h-screen {
@@ -661,10 +690,6 @@ video {
 
 .max-w-4xl {
 	max-width: 56rem;
-}
-
-.max-w-7xl {
-	max-width: 80rem;
 }
 
 .max-w-6xl {
@@ -685,10 +710,6 @@ video {
 
 .items-center {
 	align-items: center;
-}
-
-.items-stretch {
-	align-items: stretch;
 }
 
 .justify-center {
@@ -721,24 +742,16 @@ video {
 	margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-y-8 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-y-reverse: 0;
-	margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(2rem * var(--tw-space-y-reverse));
-}
-
-.space-y-16 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-y-reverse: 0;
-	margin-top: calc(4rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(4rem * var(--tw-space-y-reverse));
-}
-
 .rounded-md {
 	border-radius: 0.375rem;
 }
 
 .rounded-full {
 	border-radius: 9999px;
+}
+
+.rounded {
+	border-radius: 0.25rem;
 }
 
 .border-\[6px\] {
@@ -760,6 +773,19 @@ video {
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
 
+.bg-gradient-to-r {
+	background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.from-blue-400 {
+	--tw-gradient-from: #60a5fa;
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(96, 165, 250, 0));
+}
+
+.to-red-300 {
+	--tw-gradient-to: #fca5a5;
+}
+
 .bg-cover {
 	background-size: cover;
 }
@@ -768,20 +794,21 @@ video {
 	background-position: bottom;
 }
 
-.p-12 {
-	padding: 3rem;
+.object-cover {
+	-o-object-fit: cover;
+	   object-fit: cover;
 }
 
-.p-8 {
-	padding: 2rem;
+.p-12 {
+	padding: 3rem;
 }
 
 .p-2 {
 	padding: 0.5rem;
 }
 
-.p-20 {
-	padding: 5rem;
+.p-8 {
+	padding: 2rem;
 }
 
 .py-4 {
@@ -794,14 +821,9 @@ video {
 	padding-right: 1.5rem;
 }
 
-.py-20 {
-	padding-top: 5rem;
-	padding-bottom: 5rem;
-}
-
-.px-8 {
-	padding-left: 2rem;
-	padding-right: 2rem;
+.py-2 {
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
 }
 
 .pt-20 {
@@ -810,6 +832,10 @@ video {
 
 .pb-28 {
 	padding-bottom: 7rem;
+}
+
+.pt-3 {
+	padding-top: 0.75rem;
 }
 
 .text-center {
@@ -831,14 +857,19 @@ video {
 	line-height: 1.75rem;
 }
 
+.text-6xl {
+	font-size: 3.75rem;
+	line-height: 1;
+}
+
 .text-2xl {
 	font-size: 1.5rem;
 	line-height: 2rem;
 }
 
-.text-6xl {
-	font-size: 3.75rem;
-	line-height: 1;
+.text-sm {
+	font-size: 0.875rem;
+	line-height: 1.25rem;
 }
 
 .font-bold {
@@ -862,6 +893,11 @@ video {
 .text-blue-500 {
 	--tw-text-opacity: 1;
 	color: rgba(59, 130, 246, var(--tw-text-opacity));
+}
+
+.text-white {
+	--tw-text-opacity: 1;
+	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 
 .antialiased {
