--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -631,6 +631,14 @@ video {
 	z-index: 10;
 }
 
+.z-0 {
+	z-index: 0;
+}
+
+.z-20 {
+	z-index: 20;
+}
+
 .col-span-2 {
 	grid-column: span 2 / span 2;
 }
@@ -652,6 +660,18 @@ video {
 	margin-top: 1rem;
 }
 
+.mt-5 {
+	margin-top: 1.25rem;
+}
+
+.mb-4 {
+	margin-bottom: 1rem;
+}
+
+.mb-2 {
+	margin-bottom: 0.5rem;
+}
+
 .flex {
 	display: flex;
 }
@@ -664,16 +684,16 @@ video {
 	display: grid;
 }
 
-.inline-block {
-	display: inline-block;
-}
-
 .h-1\/2 {
 	height: 50%;
 }
 
 .h-80 {
 	height: 20rem;
+}
+
+.h-auto {
+	height: auto;
 }
 
 .min-h-screen {
@@ -698,6 +718,14 @@ video {
 
 .flex-shrink-0 {
 	flex-shrink: 0;
+}
+
+.resize-y {
+	resize: vertical;
+}
+
+.resize-none {
+	resize: none;
 }
 
 .grid-cols-1 {
@@ -754,13 +782,30 @@ video {
 	border-radius: 0.25rem;
 }
 
+.rounded-sm {
+	border-radius: 0.125rem;
+}
+
+.rounded-lg {
+	border-radius: 0.5rem;
+}
+
 .border-\[6px\] {
 	border-width: 6px;
+}
+
+.border {
+	border-width: 1px;
 }
 
 .border-white {
 	--tw-border-opacity: 1;
 	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
+}
+
+.border-gray-300 {
+	--tw-border-opacity: 1;
+	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
 }
 
 .bg-white {
@@ -773,17 +818,9 @@ video {
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
 
-.bg-gradient-to-r {
-	background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
-.from-blue-400 {
-	--tw-gradient-from: #60a5fa;
-	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(96, 165, 250, 0));
-}
-
-.to-red-300 {
-	--tw-gradient-to: #fca5a5;
+.bg-gray-300 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
 }
 
 .bg-cover {
@@ -821,9 +858,14 @@ video {
 	padding-right: 1.5rem;
 }
 
-.py-2 {
-	padding-top: 0.5rem;
-	padding-bottom: 0.5rem;
+.px-12 {
+	padding-left: 3rem;
+	padding-right: 3rem;
+}
+
+.py-6 {
+	padding-top: 1.5rem;
+	padding-bottom: 1.5rem;
 }
 
 .pt-20 {
@@ -867,11 +909,6 @@ video {
 	line-height: 2rem;
 }
 
-.text-sm {
-	font-size: 0.875rem;
-	line-height: 1.25rem;
-}
-
 .font-bold {
 	font-weight: 700;
 }
@@ -905,12 +942,91 @@ video {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.placeholder-transparent::-moz-placeholder {
+	color: transparent;
+}
+
+.placeholder-transparent:-ms-input-placeholder {
+	color: transparent;
+}
+
+.placeholder-transparent::placeholder {
+	color: transparent;
+}
+
+.placeholder-gray-200::-moz-placeholder {
+	--tw-placeholder-opacity: 1;
+	color: rgba(229, 231, 235, var(--tw-placeholder-opacity));
+}
+
+.placeholder-gray-200:-ms-input-placeholder {
+	--tw-placeholder-opacity: 1;
+	color: rgba(229, 231, 235, var(--tw-placeholder-opacity));
+}
+
+.placeholder-gray-200::placeholder {
+	--tw-placeholder-opacity: 1;
+	color: rgba(229, 231, 235, var(--tw-placeholder-opacity));
+}
+
+.placeholder-gray-300::-moz-placeholder {
+	--tw-placeholder-opacity: 1;
+	color: rgba(209, 213, 219, var(--tw-placeholder-opacity));
+}
+
+.placeholder-gray-300:-ms-input-placeholder {
+	--tw-placeholder-opacity: 1;
+	color: rgba(209, 213, 219, var(--tw-placeholder-opacity));
+}
+
+.placeholder-gray-300::placeholder {
+	--tw-placeholder-opacity: 1;
+	color: rgba(209, 213, 219, var(--tw-placeholder-opacity));
+}
+
 .shadow-md {
 	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-lg {
+	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 @media (min-width: 640px) {
+
+	.sm\:mt-2 {
+		margin-top: 0.5rem;
+	}
+
+	.sm\:mt-3 {
+		margin-top: 0.75rem;
+	}
+
+	.sm\:mt-5 {
+		margin-top: 1.25rem;
+	}
+
+	.sm\:mt-52 {
+		margin-top: 13rem;
+	}
+
+	.sm\:mt-4 {
+		margin-top: 1rem;
+	}
+
+	.sm\:mb-4 {
+		margin-bottom: 1rem;
+	}
+
+	.sm\:flex {
+		display: flex;
+	}
+
+	.sm\:min-h-screen {
+		min-height: 100vh;
+	}
 
 	.sm\:grid-cols-2 {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -919,8 +1035,16 @@ video {
 
 @media (min-width: 768px) {
 
+	.md\:col-span-2 {
+		grid-column: span 2 / span 2;
+	}
+
 	.md\:flex {
 		display: flex;
+	}
+
+	.md\:pr-10 {
+		padding-right: 2.5rem;
 	}
 }
 
